--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "linecorp/line-bot-sdk": "*"
+        "linecorp/line-bot-sdk": "^9.9",
+        "spatie/crawler": "^8.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
